# manim-deck

./: .gitignore  README.md  manim_deck.toml  pyproject.toml
src/manim_deck/: __init__.py  config.py
src/manim_deck/animations/: __init__.py  callout.py  pipeline.py
src/manim_deck/animations/custom/: README.md  airtanker.py  cellular_automata.py  jwf.py  jwf_config.yaml  wildfire_management_pipeline.py
src/manim_deck/templates/: __init__.py  base.py  theme.py
talks/example-talk/: main.py
talks/manim-research-talks-tutorial/: README.md  final-manim-talk.html  manim-research-talks-turoial.py
