[project]
name = "manim-deck"
version = "0.1.0"
description = "Reusable Manim Slides templates and animations for research presentations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ufuk Çakır" }]

dependencies = [
    "manim>=0.18.0",
    "manim-slides[pyqt6]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manim_deck"]

[tool.ruff]
line-length = 100
